crates/ui/src/render/snapshots/tgt_ui__render__message_layout__tests__every_entity_kind_snapshot_hidden_spoiler.snap
---
source: crates/ui/src/render/message_layout.rs
expression: rendered(&lines)
---
Alice · 22:13
▏ bold italic underline strike ███████ code link url
▏ mention hashtag
▏ ── rust ──
▏   fn main() {}
▏ ──
▏ ▎ a wise quote
