crates/ui/src/render/snapshots/tgt_ui__render__message_layout__tests__file_card_line_completed_snapshot.snap
---
source: crates/ui/src/render/message_layout.rs
expression: line_text(&line)
---
📎 architecture.pdf · 2.4 MB · ⏎ open
